Client-Side Pattern Fetching and Display

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -23,6 +23,19 @@ a {
   color: #1d7cf4;
 }
 
+table.pattern {
+  text-align: center;
+}
+
+tr.selectedRow {
+  background-color: #ffb3ff;
+}
+
+td.selectedStitch {
+  background-color: #dc87ff;
+  color: white;
+}
+
 a:hover {
   text-decoration: none;
 }
