--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,6 +19,8 @@
 <script src="/js/lib/jquery.js"></script>
 <script src="/js/lib/bootstrap.js"></script>
 <script src="/js/bundle.js"></script>
+<script src="/js/formatPatternForDisplay.js"></script>
+<script src="/js/loadPatternClientSide.js"></script>
 <script src="/js/speech.js"></script>
 <script src="/js/leap.js"></script>
 
