speech recognition setup, stolen from battleship assignment

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,6 +21,7 @@
 <script src="/js/bundle.js"></script>
 <script src="/js/formatPatternForDisplay.js"></script>
 <script src="/js/loadPatternClientSide.js"></script>
+<script src="/js/setupSpeech.js"></script>
 <script src="/js/speech.js"></script>
 <script src="/js/leap.js"></script>
 
