--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,9 +18,12 @@
 
 <script src="/js/lib/jquery.js"></script>
 <script src="/js/lib/bootstrap.js"></script>
+
+<script src="https://js.leapmotion.com/leap-0.6.4.min.js"></script>
+<script src="//js.leapmotion.com/leap-plugins-0.1.12.min.js"></script>
+
 <script type="text/javascript" src="/js/lib/underscore.min.js"></script>
 <script type="text/javascript" src="/js/lib/backbone.min.js"></script>
-
 
 <script src="/js/bundle.js"></script>
 <script src="/js/formatPatternForDisplay.js"></script>
