--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,6 +18,7 @@
 
 <script src="/js/lib/jquery.js"></script>
 <script src="/js/lib/bootstrap.js"></script>
+<script src="https://use.fontawesome.com/32c1f4ce10.js"></script>
 
 <script src="https://js.leapmotion.com/leap-0.6.4.min.js"></script>
 <script src="//js.leapmotion.com/leap-plugins-0.1.12.min.js"></script>
