--- a/public/css/main.css
+++ b/public/css/main.css
@@ -54,13 +54,14 @@ div {
 table.pattern {
   margin: 0 auto;
   width: auto;
+  font-family: monospace;
 }
 
-td.pattern{
+table td.pattern{
   display: block;
   padding-left: 20px;
   padding-right: 20px;
-  width: 50px;
+  width: 60px;
 }
 
 tr.selectedRow {
