--- a/public/css/main.css
+++ b/public/css/main.css
@@ -59,8 +59,6 @@ table.pattern {
 
 table td.pattern{
   display: block;
-  padding-left: 20px;
-  padding-right: 20px;
   width: 60px;
 }
 
@@ -75,6 +73,8 @@ td.selectedStitch {
 
 .btn {
   margin-left: 5px;
+  margin-right: 5px;
+  margin-top: 5px;
   margin-right: 5px;
 }
 
