--- a/public/css/main.css
+++ b/public/css/main.css
@@ -62,6 +62,10 @@ table td.pattern{
   width: 60px;
 }
 
+td.rowNum {
+  background-color: #f4f4f4;
+}
+
 tr.selectedRow {
   background-color: #ffb3ff;
 }
